--- a/desafio/style.css
+++ b/desafio/style.css
@@ -4,14 +4,14 @@
     
 }
 header{
-    background-color: aquamarine;
+    background-color: #049DBF;
     justify-content: flex-end;
     display: flex;
     min-height: 50px;
 }
 .foto_perfil{
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 200px;
     border-radius: 50%;
     margin-top: 15%;
 }
@@ -34,4 +34,6 @@ button{
     border: none;
     background: none;
 }
-
+body{
+    background-color:#D9A59A;
+}
